# patchGTARPClient

./: .gitattributes  .gitignore  .gitmodules  CHANGE.md  CLog.hpp  README.md  dllmain.cpp  dllmain.h  news.json  patch.hpp  patchGTARPClient.sln  patchGTARPClient.vcxproj  patchGTARPClient.vcxproj.filters  update.json
.github/: FUNDING.yml
Information about updates/: 2_1.md
docs/: version.md
patchGTARPClient/: BlurEffect.cpp  BlurEffect.h  Config.cpp  Config.h  CustomConnectScreen.cpp  CustomConnectScreen.h  CustomFont.cpp  CustomFont.h  CustomHelp.cpp  CustomHelp.h  CustomLoadScreen.cpp  CustomLoadScreen.h  D3D9Hook.cpp  D3D9Hook.h  DelCarTable.cpp  DelCarTable.h  DisableSnowWindow.cpp  DisableSnowWindow.h  FSignal.cpp  FSignal.h  FastScreenshot.cpp  FastScreenshot.h  Log.cpp  Log.h  MLoad.h  Menu.cpp  Menu.h  OldHUD.cpp  OldHUD.h  ReplaceableTXD.cpp  ReplaceableTXD.h  SAMP.cpp  SAMP.h  SortScreenshot.cpp  SortScreenshot.h  UnlockConect.cpp  UnlockConect.h  Updater.cpp  Updater.h  WhiteID.cpp  (+18 more)
source/: .clang-format  .gitignore  BlurEffect.cpp  BlurEffect.h  CConfig.hpp  CLog.hpp  CMakeLists.txt  CSAMP.cpp  CSAMP.h  Client.hpp  Config.cpp  Config.h  CustomFont.cpp  CustomHelp.cpp  D3D9Hook.cpp  D3D9Hook.h  DelCarTable.cpp  DelCarTable.h  DisableSnowWindow.cpp  DisableSnowWindow.h  FSignal.cpp  FSignal.h  FastScreenshot.cpp  FastScreenshot.h  Log.cpp  Log.h  Menu.cpp  Menu.h  OldHUD.cpp  ReplaceableTXD.cpp  SAMP.cpp  SAMP.h  SortScreenshot.cpp  TimeZone.hpp  UnlockConect.cpp  UnlockConect.h  WhiteID.cpp  client.h  dllmain.cpp  dllmain.h  (+18 more)
source/effects/: blur.hlsl
source/imgui/: imgui.vcxproj  imgui.vcxproj.filters
tgbot/: .gitignore  changelogs.json  changelogs.txt  last_changelog.json  last_changelog.txt  readme.txt  version.txt
tgbot/source/: .gitignore  bot.py  db.py
updater/: .gitignore  App.config  App.xaml  App.xaml.cs  CRender.cpp  CRender.h  MainWindow.xaml  MainWindow.xaml.cs  imgui.cpp  main.cpp  nanosvgrast.h  packages.config  resource.h  updater.csproj  updater.rc
updater/Properties/: AssemblyInfo.cs  Resources.Designer.cs
updater/pages/: finish.xaml  finish.xaml.cs  loading.xaml  loading.xaml.cs  start.xaml  start.xaml.cs
